Updated code after today

--- a/Week 1/Work/Coloft/index.html
+++ b/Week 1/Work/Coloft/index.html
@@ -43,20 +43,31 @@
             <nav>
                 <img src="http://cnet4.cbsistatic.com/fly/504-fly/bundles/cnetcss/images/core/logo-masthead.png">
 
+                <form>
+                    <input type="text" placeholder="Search...">
+                    <i class="fa fa-search"></i>
+                </form>
+
                 <ul>
                     <li><a href="#reviews">Reviews</a></li>
                     <li><a href="#news">News</a></li>
                     <li><a href="#videos">Videos</a></li>
                     <li><a href="#how-to">How To</a></li>
                     <li><a href="#download">Download</a></li>
-                    <li class="login"><a href="#login">Log In/Join</a></li>
+                    <li class="login"><a href="#login">Log In/Join <i class="fa fa-user"></i></a></li>
                     <li class="edition"><a href="#edition">US Edition</a></li>
                 </ul>
             </nav>
         </header>
 
         <main>
-
+            <section class="landing_articles">
+                <article>
+                    <h3>Hands on with videos and pics</h3>
+                    <h1>Our first day with one of first andriod wear watches</h1>
+                    <p>LG's G Watch is water-resistant and runs Google's new smartwatch software: is it everything we hoped for? Here are our early impressions after using it.</p>
+                </article>
+            </section>
         </main>
 
         <footer>
