Updated nobu website

--- a/Week 1/Work/Coworks/index.html
+++ b/Week 1/Work/Coworks/index.html
@@ -11,26 +11,53 @@
         <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
+        <link href='http://fonts.googleapis.com/css?family=Lobster|Open+Sans:300' rel='stylesheet' type='text/css'>
         <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
         <header>
-            <img src="http://www.noburestaurants.com/themes/nobu/assets/nobuLogo1.png">
+            <section>
+                <img src="http://www.noburestaurants.com/themes/nobu/assets/nobuLogo1.png">
 
-            <nav>
-                <ul>
-                    <li><a href="#restaurants">Restaurants</a></li>
-                    <li><a href="#contact">Contact &amp; Reserve</a></li>
-                    <li><a href="#private">Private Events</a></li>
-                    <li><a href="#magazines">Magazine</a></li>
-                    <li><a href="#store">Store</a></li>
-                </ul>
-            </nav>
+                <nav>
+                    <ul>
+                        <li><a href="#restaurants">Restaurants</a></li>
+                        <li><a href="#contact">Contact &amp; Reserve</a></li>
+                        <li><a href="#private">Private Events</a></li>
+                        <li><a href="#magazines">Magazine</a></li>
+                        <li><a href="#store">Store</a></li>
+                    </ul>
+                </nav>
+            </section>
         </header>
 
-        <main>
+        <main class="wrapper">
+            <section class="landing">
+                <img src="http://placehold.it/1000x200" height="" width="">
+            </section>
 
+            <section class="content">
+                <section>
+                    <h1>News</h1>
+
+                    <section class="news">
+                        <article>
+                            <h2>Hello World</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </article>
+                    </section>
+                </section>
+
+                <aside>
+                    
+                </aside>
+            </section>
         </main>
 
         <footer>
