finished for the day

--- a/Week 1/Work/Coworks/index.html
+++ b/Week 1/Work/Coworks/index.html
@@ -55,7 +55,7 @@
                 </section>
 
                 <aside>
-                    
+                    <h3>My Sidebar</h3>
                 </aside>
             </section>
         </main>
