Updated coworks code

--- a/Week 1/Work/Coworks/index.html
+++ b/Week 1/Work/Coworks/index.html
@@ -37,7 +37,7 @@
                 <img src="http://placehold.it/1000x200" height="" width="">
             </section>
 
-            <section class="content">
+            <section class="content clearfix">
                 <section>
                     <h1>News</h1>
 
