--- a/Lessons/02 - Intro to HTML/template.html
+++ b/Lessons/02 - Intro to HTML/template.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
         <!-- The title of the page that will appear in the browser tab/window -->
-        <title>Lesson One Sample</title>
+        <title>HTML Sample</title>
 
         <!--[if lt IE 9]>
         <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
