--- a/Lessons/03 - Intro to CSS/template.html
+++ b/Lessons/03 - Intro to CSS/template.html
@@ -7,6 +7,7 @@
         <!-- The title of the page that will appear in the browser tab/window -->
         <title>HTML Sample</title>
 
+        <link href="reset.css" rel="stylesheet" type="text/css">
         <link href="styles.css" rel="stylesheet" type="text/css">
 
         <!--[if lt IE 9]>
