Update CSS intro

--- a/Lessons/Web Development/CSS/Introduction/template.html
+++ b/Lessons/Web Development/CSS/Introduction/template.html
@@ -7,17 +7,9 @@
         <!-- The title of the page that will appear in the browser tab/window -->
         <title>HTML Sample</title>
 
-        <link href="reset.css" rel="stylesheet" type="text/css">
+        <link href="../_resources/reset.css" rel="stylesheet" type="text/css">
         <link href="styles.css" rel="stylesheet" type="text/css">
-
-        <!--[if lt IE 9]>
-        <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
     </head>
-
-    <style type="text/css">
-
-    </style>
 
     <body>
         <header>
